@@ -1,3 +1,7 @@
+2010-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-util.el (gnus-macroexpand-all): Use eval-and-compile.
+
 2010-12-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-sum.el (gnus-summary-respool-article): The completion function
